--- a/api/package.json
+++ b/api/package.json
@@ -32,7 +32,9 @@
 		"@nestjs/core": "^10.0.0",
 		"@nestjs/platform-express": "^10.0.0",
 		"@nestjs/typeorm": "^10.0.1",
+		"@types/nodemailer": "^6.4.14",
 		"dotenv": "^16.4.1",
+		"nodemailer": "^6.9.9",
 		"pg": "^8.11.3",
 		"reflect-metadata": "^0.1.14",
 		"rxjs": "^7.8.1",
