--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
 		"@nestjs/platform-express": "^10.0.0",
 		"@nestjs/typeorm": "^10.0.1",
 		"@types/nodemailer": "^6.4.14",
+		"argon2": "^0.31.2",
 		"dotenv": "^16.4.1",
 		"nodemailer": "^6.9.9",
 		"pg": "^8.11.3",
