--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,8 @@
 		"@nestjs/typeorm": "^10.0.1",
 		"@types/nodemailer": "^6.4.14",
 		"argon2": "^0.31.2",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.1",
 		"dotenv": "^16.4.1",
 		"nodemailer": "^6.9.9",
 		"passport-jwt": "^4.0.1",
