--- a/api/package.json
+++ b/api/package.json
@@ -39,9 +39,11 @@
 		"argon2": "^0.31.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
+		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.4.1",
 		"nodemailer": "^6.9.9",
 		"passport-jwt": "^4.0.1",
+		"passport-local": "^1.0.0",
 		"pg": "^8.11.3",
 		"reflect-metadata": "^0.1.14",
 		"rxjs": "^7.8.1",
@@ -51,6 +53,7 @@
 		"@nestjs/cli": "^10.0.0",
 		"@nestjs/schematics": "^10.0.0",
 		"@nestjs/testing": "^10.0.0",
+		"@types/cookie-parser": "^1.4.6",
 		"@types/express": "^4.17.17",
 		"@types/jest": "^29.5.2",
 		"@types/node": "^20.3.1",
