refactor: full client side refactor

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components", "src/app/auth/login", "src/app/ui/InfiniteLooper", "src/app/ui/Header"],
   "exclude": ["node_modules"]
 }
