--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "framer-motion": "^11.0.8",
+    "nanoclamp": "^2.0.9",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
