--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.8",
     "nanoclamp": "^2.0.9",
     "next": "14.1.0",
