--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "rippleui": "^1.12.1"
   },
   "devDependencies": {
     "@types/node": "^20",
