--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "migration:show": "npm run typeorm -- migration:show -d ./db/typeorm.config.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.556.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
