--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^4.0.0",
     "nanoclamp": "^2.0.9",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
