--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.556.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
@@ -44,7 +45,6 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/typeorm": "^10.0.1",
-    "@types/nodemailer": "^6.4.14",
     "@types/passport-google-oauth": "^1.0.45",
     "argon2": "^0.40.3",
     "class-transformer": "^0.5.1",
@@ -71,6 +71,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth2": "^0.1.8",
     "@types/passport-jwt": "^4.0.1",
