--- a/api/package.json
+++ b/api/package.json
@@ -54,6 +54,7 @@
     "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
