--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-select": "^5.8.0",
+    "react-spring": "^9.7.4",
     "rippleui": "^1.12.1"
   },
   "devDependencies": {
