--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
+    "react-icons": "^5.3.0",
     "react-select": "^5.8.0",
     "react-spring": "^9.7.4",
     "rippleui": "^1.12.1"
